# twlr

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: AppRail.tsx  AppShell.tsx  ManuscriptEditor.tsx  ProjectNavigator.tsx  ProposalCard.tsx  StudioCoordinatorPanel.tsx  TopBar.tsx  WritersRoomWorkspace.tsx
apps/desktop/src/data/: demoWorkspace.ts
apps/desktop/src/services/: aiSkillRunner.ts  projectPersistence.ts  twlrCommands.ts  workspaceAdapter.ts
docs/: CLIENT_UI_DESIGN.md  DATA_MODEL.md  DECISIONS_NEEDED.md  DEVELOPMENT.md  FIGMA_WRITERS_ROOM_BRIEF.md  I18N_STRATEGY.md  MVP_ARCHITECTURE.md  MVP_IMPLEMENTATION_PLAN.md  SHORT_DRAMA_CONFIRMATION_QUEUE.md  SHORT_DRAMA_REVERSE_BREAKDOWN_WORKFLOW.md  SHORT_DRAMA_TESTING_PLAYBOOK.md  SHORT_DRAMA_TEST_LOG.md  SMOKE_TEST.md  STUDIO_COORDINATOR.md  THEME_ANALYST_P0_COST.md  UI_WIREFRAME_SPEC.md  writers-room-meeting-flow.html
examples/demo-project/: README.md
scripts/short-drama/: apply-output.mjs  audit-case.mjs  build-correction-sheet.mjs  build-prompt.mjs  build-scene-map.mjs  check-groq.mjs  create-case.mjs  extract-audio-segments.mjs  extract-keyframes.mjs  import-transcript.mjs  index-cases.mjs  lint-report.mjs  run-case-review.mjs  transcribe-groq.mjs  validate-case.mjs
