[package]
name = "twlr-desktop"
version = "0.0.0"
description = "The Writer's Living Room desktop app"
authors = ["TWLR"]
edition = "2021"

[lib]
name = "twlr_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.13.3"
